--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.11",
+    "sqlite": "^4.0.5",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
